Fix IME window displacement

Implement inputMethodQuery() method to return the correct cursor
rectangle for displaying the IME window.

BUG: 460158